Reorganizing Code Base
Removed extraneous overlapping files

--- a/Particle Simulation/Simulator/ParticleSimulation.html
+++ b/Particle Simulation/Simulator/ParticleSimulation.html
@@ -47,12 +47,11 @@
           far more complete vector/matrix/quaternion library: (Google it!)
         <script src="../lib/glmatrix.js"></script>
     --> 
-        <script src="CForcer02.js"></script>
-        <script src="CLimit02.js"></script>
-        <!-- <script src="PartSys06.js"></script> -->
-        <script src="JH_VBObox-Lib.js"></script>
+        <script src="CForcer.js"></script>
+        <script src="CLimit.js"></script>
+        <script src="VBObox-Lib.js"></script>
         <script src="PartSysVBO.js"></script>
-        <script src="ProjA_JohnH.js"></script>
+        <script src="ParticleSimDriver.js"></script>
         
       </div>
     </main>
