--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <title>John Holtgreive's index</title>
+        <title>Portfolio - John Holtgreive</title>
     </head>
     <body>
         <nav role="navigation" class="top-nav">            
